--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,12 @@
   z-index: -1;
 }
 
+.blackout {
+  height: 100vh;
+  width: 100%;
+  background-color: black;
+}
+
 img {
   width: 100%;
   height: 100%;
