--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,17 @@ img {
 .blurred {
   filter: blur(25px);
 }
+
+.DOG {
+  /* animation: rotation 4s infinite linear; */
+  opacity: 0.5;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
+}
